--- a/mortgage-front/src/app/shared/customer-detail-modal/customer-detail-modal.component.html
+++ b/mortgage-front/src/app/shared/customer-detail-modal/customer-detail-modal.component.html
@@ -197,11 +197,10 @@
           <div class="button-group">
             <button mat-raised-button color="primary" type="submit">שמור</button>
             <customer-excel *ngIf="!disabled" [customerId]="currentCustomerId"></customer-excel>
+            <app-download-accompanying-form [customerId]="currentCustomerId!" matTooltip="הורדת פרטי לקוח"
+              matTooltipPosition="left" class="icon-button download"></app-download-accompanying-form>
             <button mat-raised-button color="warn" type="button" (click)="cancel()">ביטול</button>
-
           </div>
-
-
         </form>
       </mat-card-content>
     </mat-card>
