--- a/mortgage-front/src/app/global/confirm-dialog/confirm-dialog.component.html
+++ b/mortgage-front/src/app/global/confirm-dialog/confirm-dialog.component.html
@@ -9,6 +9,6 @@
     </p>
     <div mat-dialog-actions class="mat-dialog-actions">
         <button mat-button class="mat-button cancel-button" (click)="onNoClick()">לא</button>
-        <button mat-button class="mat-button" color="primary" (click)="onYesClick()" cdkFocusInitial>כן</button>
+        <button mat-button class="mat-button save-button" color="primary" (click)="onYesClick()" >כן</button>
     </div>
 </div>
