--- a/mortgage-front/src/app/global/confirm-dialog/confirm-dialog.component.scss
+++ b/mortgage-front/src/app/global/confirm-dialog/confirm-dialog.component.scss
@@ -31,13 +31,13 @@ button.mat-button {
     margin: 3px;
 }
 
-.cancel-button {
+.save-button {
     color: #fff; /* צבע טקסט לבן */
     background-color: #f44336; /* צבע רקע אדום */
     border: none; /* הסרת הגבול */
 }
 
-.cancel-button:hover {
+.save-button:hover {
     background-color: #d32f2f; /* צבע רקע אדום כהה בעת מעבר עם העכבר */
 }
 
