--- a/mortgage-front/src/styles.scss
+++ b/mortgage-front/src/styles.scss
@@ -1,6 +1,8 @@
 html,
 body {
     height: 100%;
+    cursor: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32"><path d="M16 0 L32 32 L16 24 L0 32 Z" fill="#f00"/></svg>'), auto;
+
 }
 
 body {
