--- a/mortgage-front/src/app/shared/customer-detail-modal/customer-detail-modal.component.html
+++ b/mortgage-front/src/app/shared/customer-detail-modal/customer-detail-modal.component.html
@@ -36,9 +36,16 @@
             <input matInput [(ngModel)]="formData['t_z']" name="id">
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="mat-form-field">
+          <!-- <mat-form-field appearance="fill" class="mat-form-field">
             <mat-label>תאריך לידה</mat-label>
             <input matInput type="date" [(ngModel)]="formData['birthDate']" name="birthDate">
+          </mat-form-field> -->
+
+          <mat-form-field appearance="fill">
+            <mat-label>תאריך לידה</mat-label>
+            <input matInput [matDatepicker]="picker" [(ngModel)]="formData['birthDate']" name="birthDate" required>
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
 
           <mat-form-field appearance="fill" class="mat-form-field">
@@ -178,11 +185,23 @@
             </mat-select>
           </mat-form-field>
 
-          <mat-form-field appearance="fill" class="mat-form-field">
+          <!-- <mat-form-field appearance="fill" class="mat-form-field">
             <mat-label>סינכרון אחרון</mat-label>
             <input matInput type="date" [(ngModel)]="formData['lastSynced']" name="lastSynced">
+          </mat-form-field> -->
+          <mat-form-field appearance="fill">
+            <mat-label>סינכרון אחרון</mat-label>
+            <input matInput [matDatepicker]="picker" [(ngModel)]="formData['lastSynced']" name="lastSynced" required>
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
-
+          
+          <!-- <mat-form-field appearance="fill">
+            <mat-label>סינכרון אחרון</mat-label>
+            <input matInput [matDatepicker]="picker"  [(ngModel)]="formData['lastSynced']" name="lastSynced" required>
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field> -->
 
           <mat-form-field appearance="fill" class="mat-form-field">
             <mat-label>נוצר בתאריך</mat-label>
