--- a/mortgage-front/src/app/global/toolbar/toolbar.component.html
+++ b/mortgage-front/src/app/global/toolbar/toolbar.component.html
@@ -8,20 +8,20 @@
       {{ loginService.isLoggedIn() ? 'יציאה' : 'התחברות' }}
     </button>
     <div class="welcome-message">
-      <span class="span">!שלום {{ loginService.GetCurrentUser().userName!=null? loginService.GetCurrentUser().userName:'אורח'}}</span>
-      <!-- Bell icon for notifications -->
+      <span class="span">!שלום {{ loginService.GetCurrentUser().userName!=null?
+        loginService.GetCurrentUser().userName:'אורח'}}</span>
       @if(!this.loginService.isAdmin()){
       <button mat-icon-button (click)="openNotifications()">
-        <mat-icon [matBadge]="this.notificationService.unreadNotificationsCount"  [matBadgeHidden]="!this.notificationService.hasUnreadNotifications"  aria-hidden="false"
+        <mat-icon [matBadge]="this.notificationService.unreadNotificationsCount"
+          [matBadgeHidden]="!this.notificationService.hasUnreadNotifications" aria-hidden="false"
           matBadgeColor="warn">notifications</mat-icon>
       </button>
       <button mat-icon-button (click)="openDocuments()" matBadge="!" matBadgeSize="large" class="demo-section"
-        matTooltip="ישנם מסמכים שעדיין לא העלית" matTooltipPosition="below" *ngIf="this.documentService.hasPendingDocuments">
+        matTooltip="ישנם מסמכים שעדיין לא העלית" matTooltipPosition="below"
+        *ngIf="this.documentService.hasPendingDocuments">
         <mat-icon>description</mat-icon>
       </button>
       }
-      <!-- Document icon for pending documents -->
-
     </div>
   </div>
   <button mat-icon-button (click)="toggleNavigationMenu()">
