--- a/mortgage-front/src/app/shared/customer-detail-modal/customer-detail-modal.component.scss
+++ b/mortgage-front/src/app/shared/customer-detail-modal/customer-detail-modal.component.scss
@@ -28,6 +28,10 @@
   width: 23vh;
 }
 
+.mat-mdc-form-field.last-row{
+  width: 18vh;
+}
+
 .is-properties-container {
   display: flex;
   flex-direction: row;
@@ -57,6 +61,8 @@
 #job-description {
   width: 49vh;
 }
+
+
 
 @media screen and (max-width: 900px) {
   .mat-form-field {
