--- a/mortgage-front/src/app/app.component.html
+++ b/mortgage-front/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="showGeneral">
+<!-- <div *ngIf="showGeneral"> -->
     <router-outlet></router-outlet>
-</div>
-<router-outlet *ngIf="!showGeneral"></router-outlet>
+<!-- </div> -->
+<!-- <router-outlet *ngIf="!showGeneral"></router-outlet> -->
