--- a/mortgage-front/src/app/global/toolbar/toolbar.component.html
+++ b/mortgage-front/src/app/global/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
     <div class="logo-container">
       <img src="assets/logo.png" alt="Logo" class="logo">
     </div>
-    <button class="buttonLog" mat-button (click)="logout()">
+    <button class="buttonLog" mat-button routerLink="/auth/login" (click)="logOut()">
       <mat-icon>{{ loginService.isLoggedIn() ? 'logout' : 'login' }}</mat-icon>
       {{ loginService.isLoggedIn() ? 'יציאה' : 'התחברות' }}
     </button>
@@ -12,11 +12,11 @@
       <!-- Bell icon for notifications -->
       @if(!this.loginService.isAdmin()){
       <button mat-icon-button (click)="openNotifications()">
-        <mat-icon [matBadge]="unreadNotificationsCount" [matBadgeHidden]="!hasUnreadNotifications"
+        <mat-icon [matBadge]="this.notificationService.unreadNotificationsCount"  [matBadgeHidden]="!this.notificationService.hasUnreadNotifications"  aria-hidden="false"
           matBadgeColor="warn">notifications</mat-icon>
       </button>
       <button mat-icon-button (click)="openDocuments()" matBadge="!" matBadgeSize="large" class="demo-section"
-        matTooltip="ישנם מסמכים שעדיין לא העלית" matTooltipPosition="below" *ngIf="hasPendingDocuments">
+        matTooltip="ישנם מסמכים שעדיין לא העלית" matTooltipPosition="below" *ngIf="this.documentService.hasPendingDocuments">
         <mat-icon>description</mat-icon>
       </button>
       }
