--- a/mortgage-front/src/app/admin/customer-list/customer-list.component.scss
+++ b/mortgage-front/src/app/admin/customer-list/customer-list.component.scss
@@ -29,9 +29,6 @@ th {
   font-weight: bold !important;
 }
 
-
-
-
 #main {
   margin-left: 40px;
   display: flex;
@@ -54,4 +51,9 @@ th {
   margin-bottom: 20px;
   text-align: right;
   color: #333; 
+}
+.contents{
+  padding: 10px;
+  margin-bottom: 10px;
+
 }
