--- a/mortgage-front/src/app/customer/documents-list-customer/documents-list-customer.component.css
+++ b/mortgage-front/src/app/customer/documents-list-customer/documents-list-customer.component.css
@@ -109,10 +109,7 @@ mat-card-actions {
   /* box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.137); */
 }
 
-.document-name:hover {
-  cursor: pointer;
-  color: #0d47a1;
-}
+
 /* 
 mat-checkbox {
   position: absolute;
@@ -211,4 +208,48 @@ mat-header-cell{
 }
 mat-row:hover{
   background-color: #e0dcdc22;
+}
+
+.document-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px; /* Space between rows */
+}
+
+.document-text {
+  margin-left: 12px; /* Increased space between icon and document name */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 200px; /* Adjust as needed */
+  font-size: 14px; /* Adjust font size as needed */
+}
+
+.document-text:hover{
+  cursor: pointer;
+  color: #0d47a1;
+}
+
+.delete-icon {
+  cursor: pointer;
+  font-size: 16px; /* Adjust as needed */
+  color: black;
+  transition: color 0.3s, border 0.3s;
+  border-radius: 50%;
+  margin-left: 7px; 
+}
+
+.delete-icon:hover {
+  color: red;
+  transform: scale(1.2);
+}
+
+.mat-icon {
+  vertical-align: middle;
+}
+
+
+.attach {
+  display: flex;
+  align-items: center;
 }
